--- a/themes/light/tt-rss.less
+++ b/themes/light/tt-rss.less
@@ -643,7 +643,7 @@ body.ttrss_main {
 						box-shadow : -1px 0px 2px -1px rgba(0,0,0,0.1);
 						border-color : @border-default transparent;
 						background : @default-bg;
-						color : #333;
+						color : @default-text;
 					}
 
 					.dijitIcon.feed-icon {
